--- a/CaseStudy1.Rmd
+++ b/CaseStudy1.Rmd
@@ -16,7 +16,7 @@ This report investigates the potential differences in birth weight between babie
 
 The CHDS dataset includes data on 1236 babies, all male, who were born between 1960 and 1967 to mothers enrolled in the Kaiser Health Plan in Oakland, California. Each baby was a single birth and survived for at least 28 days after birth. Variables in the dataset include birth weight, length of gestation, whether or not this was the mother's first pregnancy, mother's age, mother's height, mother's weight, and whether or not the mother was a smoker. 
 
-The primary objective is to answer the question: Is there a statistically significant difference in birth weights between babies born to mothers who smoked during pregnancy and those who did not? Specifically, we will explore the distribution of birth weights for both smokers and non-smokers, the incidence of low birth weight (under 100 ounces) in both groups, the potential variability in these comparisons based on different statistical methods. Using numerical, graphical, and incidence comparison approaches to answering this question, we found that [our results].
+The primary objective is to answer the question: Is there a statistically significant difference in birth weights between babies born to mothers who smoked during pregnancy and those who did not? Specifically, we will explore the distribution of birth weights for both smokers and non-smokers, the incidence of low birth weight (under 100 ounces) in both groups, the potential variability in these comparisons based on different statistical methods. Using numerical, graphical, and incidence comparison approaches to answering this question, we found that maternal smoking significantly impacts birth weight. Babies born to mothers who smoked during pregnancy tended to have lower birth weights on average (~10 oz) compared to those born to non-smokers.
 
 The report is structured as follows: Section 1 addresses each of the research questions outlined above, focusing on the numerical, graphical, and incidence comparisons between the smoking and non-smoking groups; Section 2 covers the statistical analysis processes and results; Section 3 expands the analysis by examining other variables that may impact birth weight; and Section 4 discusses the conclusions and implications of the results. Overall, this report will determine whether the difference in weight between babies born to mothers who smoked during pregnancy and those who did not is significant for the health of the baby.
 
