--- a/CaseStudy1.Rmd
+++ b/CaseStudy1.Rmd
@@ -44,10 +44,6 @@ hist(babies$gestation,
      main = "Gestation", 
      xlab = "length of gestation (days)",
      font.main = 1)
-```
-\pagebreak
-
-```{r, echo=FALSE, fig.width=3, fig.height=2.5}
 hist(babies$parity, 
      breaks = 2, 
      main = "First Pregnancy Indicator", 
@@ -93,8 +89,6 @@ We concluded that the dataset does not qualify as a simple random sample because
 ### 2.2.1. Methods
 
 Now that we had examined the dataset and each variable as a whole, we looked at the two distributions of birth weights for babies born to women who smoked during their pregnancy and for babies born to women who did not smoke during their pregnancy. Summarizing these distributions numerically, we calculated the minimum, maximum, mean, median, standard deviation, and quartile values. This will allow us to understand the basic characteristics of the data before we perform any visualizations.  
-
-\pagebreak
 
 ### 2.2.2. Analysis
 
@@ -237,12 +231,19 @@ As shown in the graph above, the incidences of low-weight babies in smoking moth
 
 ### Numerical Analysis
 
+The first type of analysis used was numerical, where we compared the minimum, maximum, mean, standard deviation, median, and quartile values of the two distributions (non-smoking women and smoking women). Numerical analysis provide concrete quantifications that allowed us to highlight the key information in the data to directly compare the two distributions. However, using numerical analysis dismisses information about the shape of the data that may be important for analysis. For example, if the data were skewed, the means and standard deviations would be less reliable due to their susceptibility to outliers.
+
 ### Graphical Analysis
+
+The second type of analysis used was graphical, where we graphed the two distributions to visualize their general shapes. While graphs make it easier to visualize shape, trends, patterns, and outliers, they don't provide specific numerical values or statistical evidence. So while graphical analysis allows us to visualize any trends, numerical is analysis is still necessary for proving the significance of those observations. In other words, numerical and graphical analysis complement each other and can be used hand-in-hand for statistical analysis.
 
 ### Incidence Analysis
 
+The last type of analysis used was incidence analysis, where we looked at rates of low-births in each distribution at different thresholds. 
+
 ### Conclusion
-The results of the analysis strongly suggest that smoking has a significant effect on birth weight and increases the risk of preterm births. The summary statistics reveal that mothers who smoke have babies with lower birth weights on average, and the proportion of low birth weights among smokers (64.71%) is substantially higher than that among non-smokers (35.29%).
+
+The results of each analysis strongly suggest that smoking has a significant effect on birth weight and increases the risk of preterm births. The summary statistics reveal that mothers who smoke have babies with lower birth weights on average, the graph of the distribution of smokers was shifted to the left of the graph of the distribution of non-smokers, and the proportion of low birth weights among smokers (64.71%) is substantially higher than that among non-smokers (35.29%).
 
 # 3 Advanced Analysis
 
@@ -305,15 +306,22 @@ From the summary statistics, we observe that the mean, median, first and third q
 
 # 4 Discussion
 
-The primary goal was to determine whether there is a statistically significant difference in birth weights between babies born to mothers who smoked during pregnancy and those who did not. We used the Child Health and Development Studies (CHDS) dataset identify the effects of maternal smoking using numerical, graphical, and incidence comparison methods.
+The goal of this analysis was to find out if there was a statistically significant difference between the birth weights of babies that were born from smoking mothers and non-smoking mothers. Using numerical, graphical, and incidence comparisons, we found that all three types of analysis suggest that there is a difference. Specifically, babies that were born from smoking mothers tend to be lighter than babies that were born from non-smoking mothers. We even looked into other variables, like gestation period, further showing how smoking mothers tend to give birth to babies of lower weights.
 
-We found that smoking during pregnancy is associated with lower birth weights. On average, babies born to mothers who smoked during pregnancy weighed 10 ounces less than those born to non-smokers. The incidence of low birth weight (under 100 ounces) was much higher among babies born to smokers (64.71%) compared to non-smokers (35.29%). Our advanced analysis revealed that smoking not only affects birth weight but also leads to shorter gestation periods, increasing the likelihood of preterm births.
+However, our results cannot be generalized to the entire population. In other words, we cannot say that all smoking mothers tend to give birth to babies of lower weights. This is due to the nature of our sample, which wasn't representative of the entire population that we wanted to study (pregnant mothers). 
 
-The findings of this study are consistent with previous research that has shown smoking during pregnancy to be a significant risk factor for low birth weight and preterm birth. Low birth weight is a well-known indicator of poor newborn health, and babies with lower birth weights are at increased risk for infant mortality.
+Other limitations of this dataset may also affect the applicability of our results. 
 
-However, there are several limitations to this analysis. The CHDS dataset is not a simple random sample, collected from mothers enrolled in the Kaiser Health Plan in Oakland, California, between 1960 and 1967. The results of this study may not be generalizable to other populations due to this bias. During data cleaning, outliers and invalid data values were removed to avoid skewing the data results. However, there remains the possibility of legitimate outliers that could provide other insight. 
+- The dataset only provides data about women in 1960 to 1967, meaning the results from this analysis may no longer be relevant to women in the present time. 
+- The absence of data on female babies and multiple-birth babies also limits the applicability of our findings.
+- Recording only one occurrence of the mother's weight, even though how it changes throughout the course of the pregnancy may also be an important factor to consider in the analysis.
+- The aforementioned limitations with specific locations and health plans.
 
-tbc, etc, etc
+We acknowledge the presence of these limitations and understand their affects on the generalizability of our results.
+
+Other observations made during the analysis process...
+
+Future considerations include looking at...
 
 # 5 Appendix
 
